@@ -327,6 +327,8 @@ Other Changes
 
 * SOLR-9159: New cloud based concurrent atomic update test (hossman)
 
+* SOLR-9119: several static methods in ValueSourceParser have been made private (hossman)
+
 ==================  6.0.1 ==================
 (No Changes)
 
